# winrt-playground

./: CMakeLists.txt  README.md  local-build.cmd
.github/workflows/: build-msvc.yml
src/: main.cpp
